[gd_scene load_steps=5 format=2]

[ext_resource path="res://objects/Figure.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/Menu.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=2]
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="ViewportTexture" id=1]
viewport_path = NodePath("Viewport")

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="LineEdit" type="LineEdit" parent="."]
anchor_right = 1.0
margin_bottom = 28.0
placeholder_text = "Search for a sign or phrase"

[node name="MultipleOptionsPopup" type="PopupPanel" parent="."]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -160.0
margin_top = 48.0
margin_right = 160.0
margin_bottom = -32.0
grow_horizontal = 2
rect_min_size = Vector2( 240, 96 )

[node name="Title" type="Label" parent="MultipleOptionsPopup"]
anchor_right = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = 216.0
text = "Which did you mean?"
align = 1

[node name="ScrollContainer" type="ScrollContainer" parent="MultipleOptionsPopup"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0

[node name="VBoxContainer" type="VBoxContainer" parent="MultipleOptionsPopup/ScrollContainer"]

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
custom_styles/panel = SubResource( 2 )

[node name="TextureRect" type="TextureRect" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = SubResource( 1 )
flip_v = true

[node name="Options" type="HBoxContainer" parent="Panel"]
margin_left = 12.0
margin_top = 12.0
margin_right = 132.0
margin_bottom = 20.0

[node name="Button" type="Button" parent="Panel/Options"]
margin_right = 132.0
margin_bottom = 20.0
text = "Switch Perspective"

[node name="Viewport" type="Viewport" parent="."]
size = Vector2( 1016, 564 )
transparent_bg = true

[node name="World" type="Spatial" parent="Viewport"]

[node name="Figure" parent="Viewport/World" instance=ExtResource( 1 )]

[node name="CameraPivot" type="Spatial" parent="Viewport/World"]
transform = Transform( -1, 0, -8.74228e-08, -2.26267e-08, 0.965926, 0.258819, 8.44439e-08, 0.258819, -0.965926, 0, 3, 0 )

[node name="CameraDolly" type="Spatial" parent="Viewport/World/CameraPivot"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -5.68434e-14, -9.53674e-07, -1 )

[node name="Camera" type="Camera" parent="Viewport/World/CameraPivot/CameraDolly"]
current = true

[node name="Tween" type="Tween" parent="Viewport/World"]

[connection signal="text_entered" from="LineEdit" to="." method="_on_search"]
[connection signal="pressed" from="Panel/Options/Button" to="." method="_toggle_perspective"]
